Setup property card and default image.

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,9 @@
 <app-nav-bar></app-nav-bar>
-<h1>Crowe Realty</h1>
 
-<app-property-card></app-property-card>
-<app-property-list></app-property-list>
+<div class="container">
+   
+  <h1>Crowe Realty</h1>
+
+  <app-property-card></app-property-card>
+  <app-property-list></app-property-list>
+</div>
