--- a/frontend/src/app/property/property-card/property-card.component.html
+++ b/frontend/src/app/property/property-card/property-card.component.html
@@ -1,1 +1,10 @@
-<p>property-card works!</p>
+<div class="row">
+    <div class="card col-sm-4 shadow-lg">
+        <h3>Name: {{Property.Name}}</h3>
+        <img src="{{Property.Image}}" alt="Property Image" class="img-thumbnail-sm" />
+        <p>Type: {{Property.Type}}</p>
+        <p>Bedrooms: {{Property.Bedrooms}}</p>
+        <p>Bathrooms: {{Property.Bathrooms}}</p>
+        <p>Price: {{Property.Price}}</p>
+    </div>
+</div>
