--- a/frontend/src/app/property/property-list/property-list.component.html
+++ b/frontend/src/app/property/property-list/property-list.component.html
@@ -1,1 +1,5 @@
-<p>property-list works!</p>
+<div class="row">
+    <div *ngFor="let Property of Properties" class="col-sm-3">
+        <app-property-card [Property]=Property></app-property-card>
+    </div>
+</div>
