--- a/frontend/src/app/property/property-card/property-card.component.css
+++ b/frontend/src/app/property/property-card/property-card.component.css
@@ -1,5 +1,5 @@
 h3 {
-    background-color: antiquewhite;
+    background-color: rgb(201, 201, 201);
     text-align:center;
     font-weight: bold;
 }
