--- a/frontend/src/app/property/property-card/property-card.component.css
+++ b/frontend/src/app/property/property-card/property-card.component.css
@@ -16,6 +16,11 @@ h3 {
 
 }
 
+.img-wrapper {
+    position: relative;
+    overflow: hidden;
+}
+
 img{
     padding-top: 2px;
     padding-bottom: 10px;
@@ -27,28 +32,35 @@ img:hover {
     transform: scale(1.1, 1.1);
     transition: all 0.4s ease;
     
+    
 
 }
 
 .member-icons {
+    /* display: none; */
+    opacity: 0;
     position:absolute;
-    top: 50%;
+    top: 49%;
     right: 0;
     left: 0;
     margin-left: auto;
     margin-right: auto;
-    z-index: -1;
+    overflow: hidden;
+
     /* transition: all 0.5s ease; */
 }
 
-img:hover .member-icons{
-    position:absolute;
+img:hover + .member-icons, .member-icons:hover {
+    
+    /* position: absolute; */
+    /* display: block; */
+    opacity: 1;
     /* transition: all 0.5s ease; */
     top: 50%;
     right: 0;
     left: 0;
     margin-left: auto;
     margin-right: auto;
-    z-index: 100;
+    
     
 }
