--- a/frontend/src/app/property/property-card/property-card.component.html
+++ b/frontend/src/app/property/property-card/property-card.component.html
@@ -1,5 +1,6 @@
 <div class="card shadow-lg p-3 m-2">
     <h3>{{Property.Name}}</h3>
+    <div class="img-wrapper">
     <img src="{{Property.Image}}" alt="Property Image" class="img-thumbnail-sm" />
     <div >
         <ul class="list-inline text-center member-icons">
@@ -10,6 +11,7 @@
                 <button class="btn btn-primary btn-sm">Call</button>
             </li>
         </ul>
+    </div>
     </div>
     <p><strong>Type: </strong>{{Property.Type}}</p>
     <p><strong>Address: </strong>{{Property.Address}}</p>
