--- a/frontend/src/app/property/property-card/property-card.component.css
+++ b/frontend/src/app/property/property-card/property-card.component.css
@@ -16,10 +16,7 @@ h3 {
 
 }
 
-.img-wrapper {
-    position: relative;
-    overflow: hidden;
-}
+
 
 img{
     padding-top: 2px;
@@ -40,17 +37,17 @@ img:hover {
     /* display: none; */
     opacity: 0;
     position:absolute;
-    top: 49%;
+    top: 50%;
     right: 0;
     left: 0;
     margin-left: auto;
     margin-right: auto;
-    overflow: hidden;
+   
 
     /* transition: all 0.5s ease; */
 }
 
-img:hover + .member-icons, .member-icons:hover {
+.img:hover + .member-icons, .member-icons:hover {
     
     /* position: absolute; */
     /* display: block; */
