Card buttons appearing properly

--- a/frontend/src/app/property/property-card/property-card.component.html
+++ b/frontend/src/app/property/property-card/property-card.component.html
@@ -1,18 +1,18 @@
 <div class="card shadow-lg p-3 m-2">
     <h3>{{Property.Name}}</h3>
-    
-    <img src="{{Property.Image}}" alt="Property Image" class="img-thumbnail-sm" />
-    <div >
-        <ul class="list-inline text-center member-icons">
-            <li class="list-inline-item">
-                <button class="btn btn-primary btn-sm">View</button>
-            </li>
-            <li class="list-inline-item">
-                <button class="btn btn-primary btn-sm">Call</button>
-            </li>
-        </ul>
+    <div class="card-img-container">
+        <img src="{{Property.Image}}" alt="Property Image" class="img-thumbnail-sm" />
+        <div >
+            <ul class="list-inline text-center member-icons">
+                <li class="list-inline-item">
+                    <button class="btn btn-primary btn-sm bg-dark">View</button>
+                </li>
+                <li class="list-inline-item">
+                    <button class="btn btn-primary btn-sm bg-dark">Call</button>
+                </li>
+            </ul>
+        </div>
     </div>
-    
     <p><strong>Type: </strong>{{Property.Type}}</p>
     <p><strong>Address: </strong>{{Property.Address}}</p>
     <p><strong>Bedrooms: </strong>{{Property.Bedrooms}}</p>
