--- a/frontend/src/app/property/property-card/property-card.component.css
+++ b/frontend/src/app/property/property-card/property-card.component.css
@@ -13,10 +13,14 @@ h3 {
     -ms-transform: scale(1.05);
     transform: scale(1.05);
     transition: all 0.3s ease;
-
 }
 
+.card-img-container {
+    position: relative;
+    overflow: hidden;
 
+
+}
 
 img{
     padding-top: 2px;
@@ -25,39 +29,38 @@ img{
     
 }
 
-img:hover {
-    transform: scale(1.1, 1.1);
+.card-img-container img {
+    width: 100%;
+    height: 100%;
     transition: all 0.4s ease;
     
-    
+}
 
+.card-img-container:hover img {
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+    transition: all 0.4s ease;
 }
 
 .member-icons {
-    /* display: none; */
     opacity: 0;
     position:absolute;
-    top: 50%;
+    bottom: -5%;
     right: 0;
     left: 0;
     margin-left: auto;
     margin-right: auto;
-   
-
-    /* transition: all 0.5s ease; */
+    transition: all 0.1s ease-in-out;
 }
 
-.img:hover + .member-icons, .member-icons:hover {
-    
-    /* position: absolute; */
-    /* display: block; */
+.card-img-container:hover .member-icons {
     opacity: 1;
-    /* transition: all 0.5s ease; */
-    top: 50%;
-    right: 0;
-    left: 0;
-    margin-left: auto;
-    margin-right: auto;
-    
-    
+    transition: all 0.4s ease;
 }
+
+
+
+
+
+
