--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-nav-bar></app-nav-bar>
 
 <div class="container">
-  <app-property-list></app-property-list>
+  <!-- <app-property-list></app-property-list> -->
+  <router-outlet></router-outlet>
+  
 </div>
