--- a/frontend/src/app/property/property-card/property-card.component.html
+++ b/frontend/src/app/property/property-card/property-card.component.html
@@ -5,7 +5,7 @@
         <div >
             <ul class="list-inline text-center member-icons">
                 <li class="list-inline-item">
-                    <button class="btn btn-primary btn-sm bg-dark">View</button>
+                    <button class="btn btn-primary btn-sm bg-dark" routerLink="/property-detail/{{Property.Id}}">View</button>
                 </li>
                 <li class="list-inline-item">
                     <button class="btn btn-primary btn-sm bg-dark">Call</button>
