--- a/frontend/src/app/property/property-detail/property-detail.component.html
+++ b/frontend/src/app/property/property-detail/property-detail.component.html
@@ -1,1 +1,17 @@
 <p>This is detail view for property {{propertyId}}</p>
+
+<button class="btn btn-dark" (click)="onBack()">Back</button>
+<br>
+<button class="btn btn-dark" (click)="onLast()">Last</button>
+<br>
+<button class="btn btn-dark" (click)="onNext()">Next</button>
+<br>
+<button class="btn btn-dark btn-sm" routerLink="/property-detail/1">1</button>
+<button class="btn btn-dark btn-sm" routerLink="/property-detail/2">2</button>
+<button class="btn btn-dark btn-sm" routerLink="/property-detail/3">3</button>
+<button class="btn btn-dark btn-sm" routerLink="/property-detail/4">4</button>
+<button class="btn btn-dark btn-sm" routerLink="/property-detail/5">5</button>
+<button class="btn btn-dark btn-sm" routerLink="/property-detail/6">6</button>
+<button class="btn btn-dark btn-sm" routerLink="/property-detail/7">7</button>
+<button class="btn btn-dark btn-sm" [routerLink]="['/property-detail/','8']">8</button>
+
